# arc-neural-reasoning-model

./: .gitignore  ARC_GPT2_Hyperparameter_Optimization_and_Scaling_Analysis.ipynb  Copy_of_ARC_GPT2_Hyperparameter_Optimization_and_Scaling_Analysis.ipynb  LICENSE  Mojo_Development.md  Oct_20_functional_branch_V2_ARC_Mamba_GPT2_Hyperparameter_Optimization_and_Scaling_Analysis.ipynb  Oct_20_||_functional_branch_||_V2_ARC_Mamba_GPT2_Hyperparameter_Optimization_and_Scaling_Analysis.ipynb  README.md  TODO  TODO.md  benchmark.py  benchmark_results.csv  benchmark_statistics.csv  conventions.md  convert_to_mojo.sh  copy_relevant_files.py  create_arc_solver_structure.py  create_fix_report_script.sh  create_project_structure.py  delete_fix_branches.py  error_log.json  fix_report.txt  git_commit_hist.py  llm_config.yaml  mypy.ini  optuna_results.db  profile_train.py  progress_log.json  pyproject.toml  pytest_error_fixer.py  requirements_dev.txt  run_tests.sh  setup.cfg  te.py  test_results.json  tox.ini
.devcontainer/: .devcontainer  Dockerfile  devcontainer.json
.github/workflows/: test.yml
EXPERIMENTAL/: model_memory_estimator.py
arc_sat_solver/: create_arc_sat_solver_structure.py
arc_sat_solver/src/sat_solver/: cnf_converter.py
arc_sat_solver/tests/sat_solver/: test_cnf_converter.py
benchmark_results/: baseline_benchmark_statistics.csv
cache/: arc_dataset_cache_6b7a0dd780e9e48bcd890026dd300187.pkl  arc_dataset_cache_bd9107f8a196345cf01a65f1dd772b16.pkl
checkpoints/: arc_model-epoch=00-val_loss=0.73.ckpt  arc_model-epoch=01-val_loss=0.58.ckpt  arc_model-epoch=02-val_loss=0.50.ckpt
gpt2_arc/: ARC_GPT2_Hyperparameter_Optimization_and_Scaling_Analysis.ipynb  README.md  add_dependencies_to_magic.py  argp  argp_copy  benchmark.py  benchmark_results.csv  benchmark_statistics.csv  great  mojo_error_parser.py  mojo_migration.md  mojoproject.toml  optuna_manager  previous_errors.json  previous_errors.txt  requirements.txt  setup.py  test_dataset  top_error.json  top_error.txt
gpt2_arc/benchmark_results/: torch.set_float32_matmul_precision_and_torch.autocastbenchmark_results.csv
gpt2_arc/debug tips/: test_differential_pixel_accuracy.md  test_gpt2.md  test_integration_experiment.md  test_pytest_error_fixer.md
gpt2_arc/dev/: combined_output.txt  compressed_output.txt  copy_relevant_files.py  run_tests.sh  test_pytest_error_fixer.py  uncompressed_output.txt
gpt2_arc/dev/1filellm/: onefilellm.py
gpt2_arc/dev/benchmark_results/: torch.set_float32_matmul_precision_and_torch.autocastbenchmark_statistics.csv
gpt2_arc/dev/debug tips/: test_arc_dataset.md  test_benchmark.md  test_end_to_end.md  test_model_evaluation.md  test_results_collector.md  test_train.md  test_trainer.md
gpt2_arc/dev/scripts/: memory_test.py
gpt2_arc/scripts/: memory_test.py
gpt2_arc/src/: ARC-GPT2_Hyperparameter_Optimization_and_Scaling_Analysis.ipynb  __init__.py  checkpoint_evaluator.py  checkpoint_evaluator.🔥  config.py  config.🔥  evaluate.py  evaluate.🔥  hyperparameter_tuning_workflow.ipynb  optimize_hyperparameters.py  optimize_hyperparameters.🔥  optuna_results.db  train.py
gpt2_arc/src/data/: arc_dataset.py  arc_dataset.🔥  cache.py  loaders.py  test_arc_data_functions2.py  test_arc_dataset_bestof3.py  verify_arckit_data.py
gpt2_arc/src/models/: gpt2.py  gpt2.🔥  mamba_block_internal.py  mamba_block_internal.🔥
gpt2_arc/src/training/: argp.mojo  (+12 more)
gpt2_arc/tests/: __init__.py  test_arc_dataset.py  test_arc_trainer.py  test_balancing.py  test_benchmark.py  test_checkpoint_loading.py  test_class_weights.py  test_dataset.py  test_differential_pixel_accuracy.py  test_end_to_end.py  test_evaluate.py  test_experiment_tracker.py  test_gpt2.py  test_gpt2_arc.py  test_grokfast.py  test_helpers.py  test_hyperparameter_optimization.py  test_integration_experiment.py  test_mamba_integration.py  test_metrics.py  test_model_evaluation.py  test_models.py  test_optimize_hyperparameters.py  test_plan.md  test_pytest_error_fixer.py  test_pytorch_lightning_integration.py  test_results_collector.py  test_synthetic_arc_dataset.py  test_synthetic_data.py  test_synthetic_data_loading.py  test_train.py  test_trainer.py
gpt2_arc/tmp/: uncompressed_output.txt
prof/: test_benchmark_model_device_types[cpu].prof  test_benchmark_model_normal_operation.prof
raptor/: EmbeddingModels.py  QAModels.py  RetrievalAugmentation.py  SummarizationModels.py  __init__.py  cluster_tree_builder.py  cluster_utils.py  raptor_rag.py  tree_builder.py  tree_retriever.py  tree_structures.py  utils.py
src/training/: trainer.py
src/utils/: experiment_tracker.py  results_collector.py
tests/: test_synthetic_data_loading.py
tmp/: combined_output.txt  compressed_output.txt  run_tests.sh  uncompressed_output.txt
tmp/tmp/: uncompressed_output.txt
(+72 files in other folders)
