[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "gpt2_arc/tests",
]

[project]
dynamic = ["readme", "classifiers"]
name = "gpt2_arc"
version = "0.1.0"
description = "A project for ARC using GPT-2"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "torch",
    "numpy",
    "pytest",
    "pytorch-lightning",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "flake8",
]
