[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=gpt2_arc --cov-report=term-missing"
testpaths = [
    "gpt2_arc/tests",
]

[project]
dynamic = ["readme", "classifiers"]
name = "gpt2_arc"
version = "0.1.0"
description = "A project for ARC using GPT-2"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "torch",
    "numpy",
    "pytest",
    "pytorch-lightning",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "flake8",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true