[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt2_arc"
version = "0.1.0"
description = "A project for ARC using GPT-2"
authors = [
    { name = "OpenHands", email = "openhands@all-hands.dev" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "numpy>=1.26.0",
    "pytorch-lightning>=2.4.0",
    "einops>=0.8.0",
    "datasets>=2.14.0",
    "wandb>=0.18.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "cysimdjson==23.8",
    "jsonschema>=4.23.0",
    "arckit>=0.1.0",
    "bitnet>=0.2.5",
    "optuna>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "coverage>=7.6.0",
    "hypothesis>=6.115.0",
]

train = [
    "accelerate>=0.33.0",
    "bitsandbytes==0.42.0",
    "fairscale>=0.4.13",
    "optuna>=4.0.0",
    "tensorboard>=2.18.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.2.0",
    "ipykernel>=6.29.0",
    "notebook>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gpt2_arc"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=gpt2_arc --cov-report=term-missing"
testpaths = ["gpt2_arc/tests"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true