[metadata]
name = arc-neural-reasoning-model
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A neural reasoning model for the ARC challenge
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/arc-neural-reasoning-model
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9


packages = find:

[options.packages.find]
where = src
exclude =
    tmp
    checkpoints
    arc_sat_solver
    benchmark_results

install_requires =
    torch>=2.0.0
    pytorch-lightning>=2.0.0
    numpy>=1.20.0

[mypy]
python_version = 3.9
ignore_missing_imports = True
strict_optional = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=20.8b1
    isort>=5.0
    flake8>=3.9
    ruff>=0.0.1
    mypy>=0.910

[options.package_data]
gpt2_arc = py.typed
